--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
-    "uuid": "^10.0.0"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0",
+    "yamljs": "^0.3.0"
   },
   "name": "professor-ramon",
   "version": "1.0.0",
